front-bugfix Display is now correct on mobile devices

--- a/front/src/components/Header/style.scss
+++ b/front/src/components/Header/style.scss
@@ -1,8 +1,8 @@
 .header
 {
   position: fixed;
-  top: 30px;
-  right: 30px;
+  top: 20px;
+  right: 20px;
   max-height: 100px;
 }
 
